Constructor Message.js
Minor HTML fixes as well.

--- a/2-labbymezzage/index.html
+++ b/2-labbymezzage/index.html
@@ -22,7 +22,9 @@
                         <li>
                             <button type="submit" id="post">Send</button>
                         </li>
+                        </ul>
                     </form>
+                </footer>
                 </main>                
             </body>
         </html>
