LabbyMezzage late push
copied from laptop offline

--- a/2-labbymezzage/index.html
+++ b/2-labbymezzage/index.html
@@ -9,13 +9,14 @@
 <body>
     <main id="container">
             <h1>Labby Mezzage</h1>
+        <div id="counter"></div>
             <div id="messageboard"> 
             </div>
             <footer>
                 <form>
                     <ul>
                         <li>
-                            <textarea id="message" cols="55" rows="1"></textarea>
+                            <textarea id="messageInput" cols="55" rows="1"></textarea>
                         </li>
                         <li>
                             <button type="submit" id="post">Send</button>
