--- a/3-gameon/memory/index.html
+++ b/3-gameon/memory/index.html
@@ -1,15 +1,24 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="css/style.css"> 
-        <title>Memory game</title>
-    </head>
-    <body>
-        
-        
-        <script src="script/random.js"></script>
-        <script src="script/memory.js"></script>
-    </body>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Memory game</title>
+</head>
+
+<body>
+    <main id="container">
+        <h1 id="gameTitle">Mattias Memory Game</h1>
+        <div><span id="text"></span></div>
+        <div>
+            <table  id="gameboard"></table>
+
+        </div>
+    </main>
+    <script src="script/Memory.js"></script>
+    <script src="script/random.js"></script>
+
+</body>
 </html>
