--- a/4-forms/index.html
+++ b/4-forms/index.html
@@ -16,16 +16,16 @@
         <form id="webform" method="post" action="http://voyager.lnu.se/tekinet/kurser/dtt/wp_webbteknik/process_form.php">
             <fieldset>
                 <label for="name">Förnamn :</label>
-                <input type="text" name="name" />
+                <input type="text" name="name" id="name"/>
 
                 <label for="surname">Efternamn :</label>
-                <input type="text" name="surname" />
+                <input type="text" name="surname" id="surname" />
 
                 <label for="zipcode">Postnummer :</label>
-                <input type="text" name="zipcode">
+                <input type="text" name="zipcode" id="zipcode">
 
                 <label for="email">Email :</label>
-                <input type="email" name="email" />
+                <input type="email" name="email" id="email"/>
 
                 <label for="priceModel">Prismodell :</label>
                 <select name="priceModel" id="priceModel">
