--- a/5-PWD/index.html
+++ b/5-PWD/index.html
@@ -13,13 +13,13 @@
     <div id="container">
         <section id="menu">
 
-            <a id="gallery" href="#">
+            <a id="gallery" href="#" title="Gallery">
                 <img src="pics/imageview.png" alt="Image Gallery" id="imageImg" />
             </a>
-            <a id="memoryGame" href="#">
+            <a id="memoryGame" href="#" title="Memory Game">
                 <img src="pics/game.png" alt="Memory Game" id="memoryImg" />
             </a>
-            <a id="rssReader" href="#">
+            <a id="rssReader" href="#" title="RSS Reader">
                 <img src="pics/rss.png" alt="RSS Reader" id="rssImg" />
             </a>
 
