--- a/4-forms/index.html
+++ b/4-forms/index.html
@@ -35,9 +35,9 @@
                     <li>
                         <label for="priceModel">Prismodell :</label>
                         <select name="priceModel" id="priceModel">
-                            <option value="low">Låg</option>
-                            <option value="medium">Mellan</option>
-                            <option value="high">Hög</option>
+                            <option value="Låg">Låg</option>
+                            <option value="Mellan">Mellan</option>
+                            <option value="Hög">Hög</option>
                         </select>
                     </li>
                     <button type="submit" id="buttonSend">Skicka</button>
