--- a/5-PWD/index.html
+++ b/5-PWD/index.html
@@ -6,29 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
-    <title>PWD</title>
+    <title>Mattias PWD</title>
 </head>
 
 <body>
     <div id="container">
         <section id="menu">
 
-            <a id="gallery" href="#" title="Gallery">
+            <a id="imageGallery" href="#" title="Gallery">
                 <img src="pics/imageview.png" alt="Image Gallery" id="imageImg" />
             </a>
-            <a id="memoryGame" href="#" title="Memory Game">
-                <img src="pics/game.png" alt="Memory Game" id="memoryImg" />
-            </a>
-            <a id="rssReader" href="#" title="RSS Reader">
-                <img src="pics/rss.png" alt="RSS Reader" id="rssImg" />
-            </a>
-
         </section>
     </div>
 
-    <!-- JS -->
-    <script src="script/jquery-2.0.3.min.js"></script>
-    <script src="script/main.js"></script>
+    <!-- JS -->   
+    <script src="script/AjaxCon.js"></script>
+    <script src="script/MKPWD.js"></script>
 </body>
 
 </html>
